--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
     <form action="index.php" method="POST" enctype="multipart/form-data">
 
         <label for="username">username</label>
-        <input type="text" id="username" placeholder="Enter your name here:" minlength="6" maxlength="15" required>
+        <input type="text" id="username" placeholder="Enteer your name here:" minlength="6" maxlength="15" required>
 
         <label for="password">password</label>
         <input type="password" required><br>
